--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ android {
         viewBinding true
     }
 
+//    dataBinding {
+//        enabled = true
+//    }
+
     configurations {
         implementation.exclude module:'protobuf-java'
     }
